# mlops-lab11

./: LICENSE  README.md  pyproject.toml  report.md
.github/workflows/: ci_cd_workflows.yaml  hello_world.yaml
